--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    scroll-behavior: smooth;
+    scroll-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+}
+
+@layer base {
+    h1, h2, h3, h4, h5, h6 {
+      @apply font-playfair;
+    }
+  
+    body {
+      @apply font-inter;
+    }
+  }
